# build_cxx

./: CMakeLists.txt  README.md
build_cxx/: CMakeLists.txt
build_cxx/client/: CMakeLists.txt
build_cxx/client/include/build_cxx/client/: core.hxx  debug_helper.hxx  macros.h  name_macros.h  registrator.hxx
build_cxx/client/src/: debug_helper.cxx  dummy.cxx  file_template.cxx  registrator.cxx
build_cxx/client/src/include/impl/: implicit_name.h
build_cxx/common/: CMakeLists.txt
build_cxx/common/include/build_cxx/common/: abstract_target.hxx  file_target.hxx  fs_proxy.hxx  location.hxx  macros.h  phony_target.hxx  project.hxx  proxy.hxx  target_alias.hxx  target_builder.hxx  target_status.hxx
build_cxx/common/include/build_cxx/utility/: unreachable.hxx
build_cxx/common/src/: abstract_target.cxx  file_target.cxx  file_template.cxx  fs_proxy.cxx  phony_target.cxx  project.cxx  target_alias.cxx  target_builder.cxx  target_status.cxx
build_cxx/driver/: CMakeLists.txt  main.cxx
build_cxx/driver/include/build_cxx/driver/: build_request.hxx  build_request_comparator.hxx  build_request_comparators_chain.hxx  build_request_priority_queue.hxx  build_result.hxx  dlopen_scoped.hxx  make_comparator_chain.hxx  process_input.hxx  processed_targets.hxx  scheduler.hxx  target_path.hxx
build_cxx/driver/src/: build_request.cxx  build_request_comparator.cxx  build_request_comparators_chain.cxx  dlopen_scoped.cxx  main.cxx  process_input.cxx  processed_targets.cxx  scheduler.cxx
include/build_cxx/: core.hxx
include/build_cxx/impl/: implicit_name.h
include/build_cxx/targets/: generic.hxx  translation_unit.hxx
include/public/build_cxx/impl/: main.hxx
scripts/: configure.bash  git_checkout.bash  system_bats_tests.bash  system_tests.bash  unit_tests.bash
scripts/common/: bats_runner.bash  get_bats_package.bash  initialize_bats.bash
src/: cmd_wrapper.cxx  exec_path_args.cxx  impl.cxx  pipe_helper.cxx  syscall_helper.cxx
src/include/impl/: cmd_wrapper.hxx  exec_path_args.hxx  native_fd_t.hxx  pipe_helper.hxx  process_handle_t.hxx  syscall_helper.hxx
tests/: CMakeLists.txt
tests/01/: build.cxx
tests/01/a/: build.cxx
tests/01/b/: build.cxx
tests/integration/: CMakeLists.txt
tests/integration/01/: build.cxx
tests/integration/01/a/: build.cxx
tests/integration/01/a/src/: AAA_1.cxx
tests/integration/01/b/: build.cxx
tests/integration/01/b/c/: build.cxx
tests/integration/01/b/c/src/: AAA_3.cxx
tests/integration/01/b/src/: AAA_2.cxx
tests/integration/02/: build.cxx
tests/integration/02/src/: BBB..hxx  BBB.cxx  BBB.hxx
tests/integration/03/: build.cxx
tests/integration/03/include/: CCC.hxx
tests/integration/03/src/: CCC.cxx
tests/system/: CMakeLists.txt  build_cxx_system_tests.cxx
tests/system/custom_helpers/: populate_BUILD_CXX_BIN_DIR.bash  prepare_BUILD_CXX_RESULTS_DIR.bash
tests/system/include/: env.hxx
tests/system/src/: env.cxx
tests/system/suite/: 001_basic.bats
tests/system_bats/suite/: 001_basic.bats
tests/unit/: CMakeLists.txt  doctest_main.cxx
tests/unit/cases/: exec_path_args.test.cxx  fs_mock.test.cxx  mng_file.test.cxx
tests/unit/cases/client/: debug_helper.test.cxx
tests/unit/cases/common/: file_target.test.cxx  phony_target.test.cxx  target_alias.test.cxx  target_status.test.cxx
tests/unit/cases/driver/: build_request_comparators_chain.test.cxx  processed_targets.test.cxx
tests/unit/common/ips/include/ips/: ips.hxx
tests/unit/common/ips/src/: ips.cxx
tests/unit/helper/: some_cli_app.cxx
tests/unit/include/build_cxx/test_helpers/: built_targets_t.hxx  fake_clock.hxx  fs_mock.hxx  mng_file.hxx  mock_file_target.hxx  mock_fs.hxx  mock_phony_target.hxx  mock_project.hxx  test_file_target.hxx  test_phony_target.hxx
tests/unit/src/: mng_file.cxx
